<resources>
    <string name="app_name">头牌</string>
    <string name="title_my_center">个人中心</string>
    <string name="title_user_info">个人信息</string>
    <string name="title_email">邮箱</string>
    <string name="title_phone">手机号</string>
    <string name="title_nick">修改昵称</string>
    <string name="title_introduce">编辑自我介绍</string>
    <string name="title_setting">设置</string>
    <string name="title_modify_password">修改密码</string>
    <string name="title_add_project">添加项目</string>
    <string name="title_edit_project">编辑项目</string>
    <string name="title_my_project">我的项目</string>
    <string name="title_frag_concern">关注</string>
    <string name="title_set_group">设置分组</string>
    <string name="title_flash">实时快讯</string>
    <string name="title_subject_list">专栏</string>
    <string name="title_comment_detail">对%s的评论</string>
    <string name="title_road_detail">对%s的路演评价</string>
    <string name="title_position">身份</string>
    <string name="title_vertify_position">身份认证</string>
    <string name="title_institution">机构职务</string>
    <string name="title_road_success">已提交</string>
    <string name="title_create_investor">手动录入投资人</string>
    <string name="title_about_us">关于我们</string>
    <string name="title_feed_back">建议反馈</string>
    <string name="title_contact_us">联系我们</string>
    <string name="title_privacy_policy">隐私政策</string>
    <string name="title_service_agreement">服务协议</string>
    <string name="title_recommend">您可能感兴趣</string>
    <string name="title_influency">我的影响值</string>
    <string name="title_add_case">添加投资案例</string>
    <string name="dealing">处理中...</string>
    <string name="home_tab_home">首页</string>
    <string name="home_tab_investor">投资人</string>
    <string name="home_tab_concern">关注</string>
    <string name="home_tab_mine">我的</string>
    <string name="setting_security">账号安全</string>
    <string name="setting_password">我的密码</string>
    <string name="setting_clean_cache">清理缓存</string>
    <string name="setting_feedback">意见反馈</string>
    <string name="setting_about_us">关于我们</string>
    <string name="setting_logout">退出账号</string>
    <string name="my_vertify">身份认证</string>
    <string name="my_focus">我的关注</string>
    <string name="my_collect">我的收藏</string>
    <string name="my_reply">我的回复</string>
    <string name="my_comment">我的评论</string>
    <string name="my_fans">我的粉丝</string>
    <string name="my_setting">设置</string>
    <string name="hint_search_investor">输入想要了解的投资人</string>
    <string name="hint_search_fund">输入想要了解的投资机构</string>
    <string name="hint_search_investor_fund">搜索想要了解的投资人或机构</string>
    <string name="search">搜索</string>
    <string name="comfirm">确定</string>
    <string name="reset">重置</string>
    <string name="news">快讯 |</string>
    <string name="more">更多</string>
    <string name="week_investor">本周Sexy</string>
    <string name="last_comment">| 最新评论</string>
    <string name="selected_comment">精选热评</string>
    <string name="subject_string">专栏文章</string>
    <string name="hint_input_phone">请输入手机号</string>
    <string name="investor_join_comment">|  评论 </string>
    <string name="hint_input_vertify_code">请输入验证码</string>
    <string name="hint_input_password">请输入密码</string>
    <string name="hint_password_rule">设置密码 (8~20位字母数字组合)</string>
    <string name="hint_new_password_rule">新密码 (8~20位字母数字组合)</string>
    <string name="hint_comfirm_password">确认密码</string>
    <string name="get_vertify_code">获取验证码</string>
    <string name="reget_vertify_code">重新获取</string>
    <string name="create_account">创建帐号</string>
    <string name="bind_phone">绑定手机号</string>
    <string name="please_login">已有帐号请登录 ></string>
    <string name="reset_password">重置密码</string>
    <string name="find_password">找回密码</string>
    <string name="wx_login">微信登录</string>
    <string name="qq_login">QQ 登录</string>
    <string name="forget_password">忘记密码 ></string>
    <string name="login">登录</string>
    <string name="phone">手机号</string>
    <string name="complete">完成</string>
    <string name="go_to_app">进入应用</string>
    <string name="create_success">帐号创建完成</string>
    <string name="reset_success">密码已修改</string>
    <string name="next_step">下一步</string>
    <string name="continue_improve_info">继续完善信息</string>
    <string name="look_around">随便逛逛</string>
    <string name="re_login">重新登录</string>
    <string name="qq_bind">QQ 已授权，请绑定手机号</string>
    <string name="wx_bind">微信已授权，请绑定手机号</string>
    <string name="get_vertify_ing">已发送 (%s)</string>
    <string name="my_project">我的项目</string>
    <string name="my_influency">我的影响值</string>
    <string name="my_message">消息通知</string>
    <string name="setting">设置</string>
    <string name="my_sent">我发出的</string>
    <string name="avatar">头像</string>
    <string name="nick">昵称</string>
    <string name="sex">性别</string>
    <string name="sex_male">男</string>
    <string name="sex_female">女</string>
    <string name="my_description">自我介绍</string>
    <string name="email">邮箱</string>
    <string name="position">身份</string>
    <string name="indentify">身份认证</string>
    <string name="save">保存</string>
    <string name="input_count">还可以输入 (%s) 字</string>
    <string name="hint_introduce">用一段文字介绍自己</string>
    <string name="input_email">输入邮箱</string>
    <string name="input_email_alternate">输入备用邮箱</string>
    <string name="input_institution">输入机构</string>
    <string name="input_position">输入职务</string>
    <string name="nick_defalut">sexyvc用户</string>
    <string name="position_defalut">担任职位</string>
    <string name="assume_office">担任职务</string>
    <string name="compant_defalut">所在公司</string>
    <string name="sex_defalut">男</string>
    <string name="input_defalut">未填写</string>
    <string name="not_fill">未填写</string>
    <string name="not_complete">未完成</string>
    <string name="has_complete">已完成</string>
    <string name="now_completing">审核中</string>
    <string name="take_photo">拍摄</string>
    <string name="from_album">从相册选择</string>
    <string name="cancle">取消</string>
    <string name="hint_input_backup_phone">输入备用手机号</string>
    <string name="modify_password">修改密码</string>
    <string name="clear_cache">清除缓存</string>
    <string name="about_us">关于我们</string>
    <string name="feedback">建议反馈</string>
    <string name="logout">登出</string>
    <string name="no_known">未知</string>
    <string name="exit_warn">再按一次退出程序</string>
    <string name="comfirm_exit">确定登出吗？</string>
    <string name="old_password">旧密码</string>
    <string name="new_password">新密码</string>
    <string name="comfirm_password">确认密码</string>
    <string name="auth_type">身份类型</string>
    <string name="auth_position">机构职务</string>
    <string name="project_name">项目名称</string>
    <string name="project_introduce">一句话简介</string>
    <string name="project_domain">所属行业</string>
    <string name="project_last_finance">上轮融资</string>
    <string name="hint_introduce_project">用一段文字介绍项目</string>
    <string name="hint_last_finance">融资金额（选填）</string>
    <string name="renminbi">人民币</string>
    <string name="dollar">美金</string>
    <string name="set_all_readed">全部已读</string>
    <string name="message">消息</string>
    <string name="notice">通知</string>
    <string name="edit">编辑</string>
    <string name="has_concern">已关注</string>
    <string name="concern">关注</string>
    <string name="commnet">评价</string>
    <string name="road_comment">路演评价</string>
    <string name="professional_qualities">行业理解</string>
    <string name="feedback_speed">反馈速度</string>
    <string name="road_efficiency">路演效率</string>
    <string name="experience_share">经验分享</string>
    <string name="contact_information">联系方式</string>
    <string name="telephone">电话</string>
    <string name="we_chat">微信</string>
    <string name="hint_we_chat">请输入微信号</string>
    <string name="remarks">备注</string>
    <string name="detail">详情</string>
    <string name="remark_concern">请输入备注，比如在哪里见到、有什么特点、喜欢什么样的项目等</string>
    <string name="hint_feed_back">给我们留下你的建议吧！</string>
    <string name="select_action">选择您的操作</string>
    <string name="modify_group_name">修改组名</string>
    <string name="delele_group">删除该组</string>
    <string name="comfirm_delete_group">确定删除(%s)</string>
    <string name="input_new_group_name">请输入新分组的名称</string>
    <string name="edit_group_name">请输入分组的名称</string>
    <string name="edit_group">修改分组</string>
    <string name="add_group">添加分组</string>
    <string name="add_investor">添加投资人</string>
    <string name="improve_fund_info">完善机构信息</string>
    <string name="input_investor_by_hand">手动录入投资人</string>
    <string name="input_investor_by_hand_warn">通过手动录入，可以关注系统没有收录的投资人。您录入的信息将只对您个人展示，方便记录自己的融资进程。</string>
    <string name="add">添加</string>
    <string name="good">好</string>
    <string name="hint_search_concern">搜索我关注的投资人</string>
    <string name="search_history">搜索历史</string>
    <string name="clear">清除</string>
    <string name="set_group">设置分组</string>
    <string name="cancle_concern">取消关注</string>
    <string name="to_expand_hint">展开</string>
    <string name="to_shrink_hint">收起</string>
    <string name="etv_ellipsisHint">...</string>
    <string name="send_reply">发送</string>
    <string name="express_your_idea">说说你的看法吧……</string>
    <string name="comment_new">最新评论</string>
    <string name="comment_selected">精选热评</string>
    <string name="reply_comment">回应评论</string>
    <string name="has_no_comment">还没有人评论，来抢沙发吧</string>
    <string name="has_no_reply">还没有人回应，来抢沙发吧</string>
    <string name="reply_count">条回应</string>
    <string name="comment_count">条评论</string>
    <string name="additional">追评：</string>
    <string name="edit_road_comment">路演评价</string>
    <string name="edit_comment">撰写评论</string>
    <string name="choose_switch_comment">您要添加哪方面的评价？</string>
    <string name="last_browse">近期浏览</string>
    <string name="last_follow">最近关注</string>
    <string name="investor">投资人</string>
    <string name="fund">机构</string>
    <string name="institutional_fund">投资机构</string>
    <string name="base_info">基本信息</string>
    <string name="investor_case">投资案例</string>
    <string name="comment_investor">点评投资人</string>
    <string name="format_more_case">更多 (%s个)</string>
    <string name="format_more_investor">更多 (%d人)</string>
    <string name="format_more_commnet">更多 (%s条)</string>
    <string name="no_data">暂无数据</string>
    <string name="net_error">网络连接错误</string>
    <string name="net_error_hint">网络错误，请稍后再试~</string>
    <string name="has_comment">评论了</string>
    <string name="comment">评论</string>
    <string name="who_case">%s的投资案例</string>
    <string name="format_fund">收录投资人 %1$d | 评论 %2$d</string>
    <string name="auth_type_founder">创始人</string>
    <string name="auth_type_investor">投资人</string>
    <string name="auth_type_fa">财务顾问</string>
    <string name="auth_type_other">其他</string>
    <string name="upload">上传</string>
    <string name="evaluate">评价</string>
    <string name="what_question">TA提出了什么问题？</string>
    <string name="hint_answer">你的回答是？</string>
    <string name="normal_question">常见问题</string>
    <string name="normal_tag">常见标签</string>
    <string name="plus_comment">追评</string>
    <string name="commit">提交</string>
    <string name="hint_review_title">标题</string>
    <string name="hint_review_content">评论正文</string>
    <string name="hint_review_comment_plus">追评</string>
    <string name="anonymity">匿名</string>
    <string name="review_agreement1">提交即同意 </string>
    <string name="review_agreement2">《SexyVC 评论协议》</string>
    <string name="please_complete_project">请先完善您的项目信息</string>
    <string name="format_road_success">您的评价已计入%s的分数</string>
    <string name="your_comment_has_commit">您的评论已提交</string>
    <string name="investor_name">投资人姓名</string>
    <string name="money_vcode">0123456789</string>
    <string name="guide_d1">你是谁？在做什么项目？</string>
    <string name="guide_d2">完善你的信息，让投资人了解你</string>
    <string name="cancle_identity">取消认证</string>
    <string name="want_cancle_identity">要取消认证吗？</string>
    <string name="warn_commiting">我们的工作人员正在为您审核，请再耐心等等吧。</string>
    <string name="think_later">再想想</string>
</resources>