<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00000066"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/btn_report"
            android:layout_width="match_parent"
            android:layout_height="114px"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/sex_male"
            android:textColor="#0076ff"
            android:textSize="40px" />

        <View style="@style/line_style" />

        <TextView
            android:id="@+id/btn_error"
            android:layout_width="match_parent"
            android:layout_height="114px"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/sex_female"
            android:textColor="#0076ff"
            android:textSize="40px" />

        <View style="@style/line_wide_style" />

        <TextView
            android:id="@+id/cancleSelected"
            android:layout_width="match_parent"
            android:layout_height="114px"
            android:background="@color/white"
            android:text="@string/cancle"
            android:gravity="center"
            android:textColor="#0076ff"
            android:textSize="40px" />
    </LinearLayout>

</LinearLayout>