<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginTop="68dp"
        android:src="@drawable/success" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="6sp"
        android:text="@string/create_success"
        android:textColor="@color/slate_70"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvContinueInfo"
        android:layout_width="290dp"
        android:layout_height="70dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn_signup"
        android:gravity="center"
        android:paddingBottom="4dp"
        android:text="@string/continue_improve_info"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvLookAround"
        android:layout_width="290dp"
        android:layout_height="70dp"
        android:background="@drawable/btn_normal"
        android:gravity="center"
        android:paddingBottom="4dp"
        android:text="@string/look_around"
        android:textColor="@color/barbie_pink_two"
        android:textSize="16sp" />

</LinearLayout>