<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="left"
            android:padding="8dp"
            android:layout_marginTop="6dp"
            android:src="@drawable/arrow_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
           android:paddingTop="11dp"
            android:gravity="center_horizontal"
            android:text="@string/find_password"
            android:textColor="@color/slate"
            android:textSize="16sp" />


    </RelativeLayout>


    <com.qtin.sexyvc.ui.widget.PhoneEditText
        android:id="@+id/etPhone"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:background="@null"
        android:gravity="center_vertical"
        android:hint="@string/hint_input_phone"
        android:inputType="phone"
        android:maxLength="13"
        android:textColor="@color/slate"
        android:textColorHint="@color/slate30"
        android:textSize="14sp" />

    <View
        style="@style/line_style"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:paddingRight="16dp"
        android:layout_height="48dp"
        android:layout_marginLeft="16dp">

        <EditText
            android:id="@+id/etVertify"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/hint_input_vertify_code"
            android:inputType="number"
            android:maxLength="6"
            android:textColor="@color/slate"
            android:textColorHint="@color/slate30"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvGetVertify"
            android:layout_width="80dp"
            android:layout_height="24dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/vertify_code_selector"
            android:gravity="center"
            android:text="@string/get_vertify_code"
            android:textColor="@color/white90"
            android:textSize="12sp" />

    </RelativeLayout>

    <View
        style="@style/line_style"
        android:layout_marginRight="112dp"
        android:layout_marginLeft="16dp" />


    <TextView
        android:id="@+id/tvNextStep"
        android:layout_width="270dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/complete_shape_back"
        android:gravity="center"
        android:text="@string/next_step"
        android:textColor="@color/barbie_pink_two"
        android:textSize="16sp" />

</LinearLayout>