<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pale_grey_two"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28px">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="60px"
            android:layout_height="60px"
            android:layout_gravity="left"
            android:paddingLeft="16px"
            android:paddingRight="12px"
            android:src="@drawable/arrow_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            android:text="@string/reset_password"
            android:textColor="@color/slate"
            android:textSize="16sp" />


    </RelativeLayout>


    <EditText
        android:id="@+id/etFirstPassword"
        android:layout_width="match_parent"
        android:layout_height="96px"
        android:layout_marginLeft="32px"
        android:layout_marginTop="70px"
        android:background="@null"
        android:gravity="center_vertical"
        android:hint="@string/hint_new_password_rule"
        android:inputType="textPassword"
        android:textColor="@color/slate"
        android:textColorHint="@color/slate30"
        android:textSize="14sp" />

    <View
        style="@style/line_style"
        android:layout_marginLeft="32px" />

    <EditText
        android:id="@+id/etSecondPassword"
        android:layout_width="match_parent"
        android:layout_height="96px"
        android:layout_marginLeft="32px"
        android:background="@null"
        android:gravity="center_vertical"
        android:hint="@string/hint_comfirm_password"
        android:inputType="textPassword"
        android:textColor="@color/slate"
        android:textColorHint="@color/slate30"
        android:textSize="14sp" />

    <View
        style="@style/line_style"
        android:layout_marginLeft="32px" />


    <TextView
        android:id="@+id/tvComplete"
        android:layout_width="540px"
        android:layout_height="100px"
        android:layout_marginTop="82px"
        android:background="@drawable/complete_shape_back"
        android:gravity="center"
        android:text="@string/complete"
        android:textColor="@color/barbie_pink_two"
        android:textSize="16sp" />

</LinearLayout>