<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_80"
    android:gravity="bottom"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="34dp"
        android:lineSpacingExtra="6sp"
        android:text="@string/guide_d1"
        android:textColor="#ffffff"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="34dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guide_d2"
            android:textColor="@color/white90"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="60dp"
            android:layout_height="24dp"
            android:layout_marginLeft="8dp"
            android:background="@drawable/white_shape_12"
            android:gravity="center"
            android:text="@string/next_step"
            android:textColor="@color/white"
            android:textSize="12sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="186" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="188"
            android:src="@drawable/guide_4" />


    </LinearLayout>

</LinearLayout>